istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata: 
  name: "istio-ingress"
  namespace: istio-system
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec: 
  ingressClassName: nginx
  rules: 
    - host: ""
      http: 
        paths:
          - path: /jaeger
            pathType: Prefix
            backend: 
              service:
                name: tracing
                port:
                  number: 80
          - path: /kiali
            pathType: Prefix
            backend: 
              service:
                name: kiali
                port:
                  number: 20001
          - path: /grafana
            pathType: Prefix
            backend: 
              service:
                name: grafana
                port:
                  number: 3000
          - path: /prometheus
            pathType: Prefix
            backend: 
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /loki
            pathType: Prefix
            backend: 
              service:
                name: loki
                port:
                  number: 3100
          - path: /zipkin
            pathType: Prefix
            backend: 
              service:
                name: zipkin
                port:
                  number: 9411
