msad-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata: 
  name: "msad-ingress"
  namespace: default
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec: 
  ingressClassName: nginx
  rules: 
    - host: ""
      http: 
        paths:
          - path: /ad-status
            pathType: Prefix
            backend: 
              service:
                name: ad-status
                port:
                  number: 80
          - path: /advertisement
            pathType: Prefix
            backend: 
              service:
                name: advertisement
                port:
                  number: 80
          - path: /delivery
            pathType: Prefix
            backend: 
              service:
                name: delivery
                port:
                  number: 80
          - path: /inventory
            pathType: Prefix
            backend: 
              service:
                name: inventory
                port:
                  number: 80
          - path: /material
            pathType: Prefix
            backend: 
              service:
                name: material
                port:
                  number: 80
